// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatMessage > should render correctly on assistant message 1`] = `
"<div class=\\"assistant\\">
  <div class=\\"message-container\\">
    <div class=\\"content\\">
      <p>Hi there, how can I help you today?</p>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`ChatMessage > should render correctly on human message 1`] = `
"<div class=\\"user\\">
  <div class=\\"message-container\\">
    <div class=\\"content\\">
      <p>Hello Opey!</p>
    </div>
  </div>
  <!--v-if-->
</div>"
`;
